# gamegitDoom

./: README.md  Техническое задание.docx
game/: CMakeLists.txt
game/include/game/: DoomMap.h  WadLoader.h
game/lib/SDL3-3.4.2/x86_64-w64-mingw32/lib/cmake/SDL3/: SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake
game/src/: DoomMap.cpp  WadLoader.cpp  main.cpp
